# LLM-as-judge

./: README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
assistants/: openai_assistant.py  response_assistant.py
evaluation/: eval_prompts.py  report.py
evaluation/prompts/: adversarial.json  bias.json  factual.json
evaluation/results/: results.json
models/: chat_model.py
report/: report.py
utils/: utils.py
